# backend/gateway/docs/swagger.json
@@ -1028,10 +1028,12 @@
                     }
                 },
                 "periodEnd": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2025-12-20"
                 },
                 "periodStart": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2025-01-01"
                 }
             }
         },
@@ -1068,7 +1070,8 @@
                     "type": "boolean"
                 },
                 "occurredOn": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2025-12-20"
                 }
             }
         },
@@ -1127,7 +1130,8 @@
                     "type": "boolean"
                 },
                 "occurredOn": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2025-12-20"
                 },
                 "updatedAt": {
                     "type": "string"
@@ -1135,7 +1139,22 @@
             }
         },
         "ledger.TransactionPatchHandlerInput": {
-            "type": "object"
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "string"
+                },
+                "categoryID": {
+                    "type": "integer"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "occurredOn": {
+                    "type": "string",
+                    "example": "2025-12-20"
+                }
+            }
         },
         "ledger.TransactionPatchHandlerOutput": {
             "type": "object",
