# backend/gateway/internal/delivery/http/controller/v1/ledger/transaction_add_handler.go
@@ -14,7 +14,7 @@ type TransactionAddHandlerInput struct {
 	CategoryID  uint64     `json:"categoryID"`
 	Description string     `json:"description"`
 	IsIncome    bool       `json:"isIncome"`
-	OccurredOn  civil.Date `json:"occurredOn" swaggertype:"string"`
+	OccurredOn  civil.Date `json:"occurredOn" swaggertype:"string" example:"2025-12-20"`
 }
 
 type TransactionAddHandlerOutput struct {
